Optimize GitHub stats fetching

--- a/index.html
+++ b/index.html
@@ -682,3 +682,4 @@
 <!-- Update: Improve mobile navigation transition -->
 <!-- Update: Update system status text logic -->
 <!-- Update: Refine skill cards border styles -->
+<!-- Update: Optimize GitHub stats fetching -->
