Adjust color palette contrast

--- a/index.html
+++ b/index.html
@@ -673,3 +673,4 @@
 <!-- Update: Optimize image loading performance -->
 <!-- Update: Update meta tags for SEO improvements -->
 <!-- Update: Refine cursor animation logic -->
+<!-- Update: Adjust color palette contrast -->
