Update meta tags for SEO improvements

--- a/index.html
+++ b/index.html
@@ -671,3 +671,4 @@
 
 </html><!-- Update: Refactor styling for better responsiveness -->
 <!-- Update: Optimize image loading performance -->
+<!-- Update: Update meta tags for SEO improvements -->
