Refine experience item borders

--- a/index.html
+++ b/index.html
@@ -707,3 +707,4 @@
 <!-- Update: Refactor skill type mapping -->
 <!-- Update: Improve accessibility of icon buttons -->
 <!-- Update: Update leetcode card contrast -->
+<!-- Update: Refine experience item borders -->
