Update social icons hover state

--- a/index.html
+++ b/index.html
@@ -692,3 +692,4 @@
 <!-- Update: Refactor loadPortfolio function -->
 <!-- Update: Improve error handling in fetch calls -->
 <!-- Update: Adjust hero title font size -->
+<!-- Update: Update social icons hover state -->
