Refine background grid pattern

--- a/index.html
+++ b/index.html
@@ -700,3 +700,4 @@
 <!-- Update: Adjust reveal animation delay -->
 <!-- Update: Improve code readability in script block -->
 <!-- Update: Update placeholder text in contact form -->
+<!-- Update: Refine background grid pattern -->
