Optimize selection color style

--- a/index.html
+++ b/index.html
@@ -701,3 +701,4 @@
 <!-- Update: Improve code readability in script block -->
 <!-- Update: Update placeholder text in contact form -->
 <!-- Update: Refine background grid pattern -->
+<!-- Update: Optimize selection color style -->
