Adjust progress bar height

--- a/index.html
+++ b/index.html
@@ -702,3 +702,4 @@
 <!-- Update: Update placeholder text in contact form -->
 <!-- Update: Refine background grid pattern -->
 <!-- Update: Optimize selection color style -->
+<!-- Update: Adjust progress bar height -->
