Improve mobile navigation transition

--- a/index.html
+++ b/index.html
@@ -679,3 +679,4 @@
 <!-- Update: Refactor grid layout logic -->
 <!-- Update: Optimize marquee animation speed -->
 <!-- Update: Add subtle hover effects to buttons -->
+<!-- Update: Improve mobile navigation transition -->
