Update contact form validation

--- a/index.html
+++ b/index.html
@@ -684,3 +684,4 @@
 <!-- Update: Refine skill cards border styles -->
 <!-- Update: Optimize GitHub stats fetching -->
 <!-- Update: Adjust timeline spacing on mobile -->
+<!-- Update: Update contact form validation -->
