Update font loading strategy

--- a/index.html
+++ b/index.html
@@ -675,3 +675,4 @@
 <!-- Update: Refine cursor animation logic -->
 <!-- Update: Adjust color palette contrast -->
 <!-- Update: Improve typography accessibility -->
+<!-- Update: Update font loading strategy -->
