Adjust reveal animation delay

--- a/index.html
+++ b/index.html
@@ -697,3 +697,4 @@
 <!-- Update: Optimize CSS transitions performance -->
 <!-- Update: Update copyright year in footer -->
 <!-- Update: Refactor intersection observer logic -->
+<!-- Update: Adjust reveal animation delay -->
