Refactor loadPortfolio function

--- a/index.html
+++ b/index.html
@@ -689,3 +689,4 @@
 <!-- Update: Optimize Tailwind configuration -->
 <!-- Update: Add smooth scroll behavior -->
 <!-- Update: Update CV download link -->
+<!-- Update: Refactor loadPortfolio function -->
