Improve code readability in script block

--- a/index.html
+++ b/index.html
@@ -698,3 +698,4 @@
 <!-- Update: Update copyright year in footer -->
 <!-- Update: Refactor intersection observer logic -->
 <!-- Update: Adjust reveal animation delay -->
+<!-- Update: Improve code readability in script block -->
