Adjust timeline spacing on mobile

--- a/index.html
+++ b/index.html
@@ -683,3 +683,4 @@
 <!-- Update: Update system status text logic -->
 <!-- Update: Refine skill cards border styles -->
 <!-- Update: Optimize GitHub stats fetching -->
+<!-- Update: Adjust timeline spacing on mobile -->
