Update system status text logic

--- a/index.html
+++ b/index.html
@@ -680,3 +680,4 @@
 <!-- Update: Optimize marquee animation speed -->
 <!-- Update: Add subtle hover effects to buttons -->
 <!-- Update: Improve mobile navigation transition -->
+<!-- Update: Update system status text logic -->
