Update leetcode card contrast

--- a/index.html
+++ b/index.html
@@ -706,3 +706,4 @@
 <!-- Update: Update logo text case -->
 <!-- Update: Refactor skill type mapping -->
 <!-- Update: Improve accessibility of icon buttons -->
+<!-- Update: Update leetcode card contrast -->
