Final polish of UI elements

--- a/index.html
+++ b/index.html
@@ -708,3 +708,4 @@
 <!-- Update: Improve accessibility of icon buttons -->
 <!-- Update: Update leetcode card contrast -->
 <!-- Update: Refine experience item borders -->
+<!-- Update: Final polish of UI elements -->
