Update CV download link

--- a/index.html
+++ b/index.html
@@ -688,3 +688,4 @@
 <!-- Update: Refine footer sitemap links -->
 <!-- Update: Optimize Tailwind configuration -->
 <!-- Update: Add smooth scroll behavior -->
+<!-- Update: Update CV download link -->
