--- a/index.html
+++ b/index.html
@@ -674,3 +674,4 @@
 <!-- Update: Update meta tags for SEO improvements -->
 <!-- Update: Refine cursor animation logic -->
 <!-- Update: Adjust color palette contrast -->
+<!-- Update: Improve typography accessibility -->
