--- a/index.html
+++ b/index.html
@@ -704,3 +704,4 @@
 <!-- Update: Optimize selection color style -->
 <!-- Update: Adjust progress bar height -->
 <!-- Update: Update logo text case -->
+<!-- Update: Refactor skill type mapping -->
