Update placeholder text in contact form

--- a/index.html
+++ b/index.html
@@ -699,3 +699,4 @@
 <!-- Update: Refactor intersection observer logic -->
 <!-- Update: Adjust reveal animation delay -->
 <!-- Update: Improve code readability in script block -->
+<!-- Update: Update placeholder text in contact form -->
