Refactor intersection observer logic

--- a/index.html
+++ b/index.html
@@ -696,3 +696,4 @@
 <!-- Update: Refine project card shadow effects -->
 <!-- Update: Optimize CSS transitions performance -->
 <!-- Update: Update copyright year in footer -->
+<!-- Update: Refactor intersection observer logic -->
