--- a/index.html
+++ b/index.html
@@ -693,3 +693,4 @@
 <!-- Update: Improve error handling in fetch calls -->
 <!-- Update: Adjust hero title font size -->
 <!-- Update: Update social icons hover state -->
+<!-- Update: Refine project card shadow effects -->
