Add smooth scroll behavior

--- a/index.html
+++ b/index.html
@@ -687,3 +687,4 @@
 <!-- Update: Update contact form validation -->
 <!-- Update: Refine footer sitemap links -->
 <!-- Update: Optimize Tailwind configuration -->
+<!-- Update: Add smooth scroll behavior -->
