Adjust hero title font size

--- a/index.html
+++ b/index.html
@@ -691,3 +691,4 @@
 <!-- Update: Update CV download link -->
 <!-- Update: Refactor loadPortfolio function -->
 <!-- Update: Improve error handling in fetch calls -->
+<!-- Update: Adjust hero title font size -->
