Optimize marquee animation speed

--- a/index.html
+++ b/index.html
@@ -677,3 +677,4 @@
 <!-- Update: Improve typography accessibility -->
 <!-- Update: Update font loading strategy -->
 <!-- Update: Refactor grid layout logic -->
+<!-- Update: Optimize marquee animation speed -->
