--- a/index.html
+++ b/index.html
@@ -705,3 +705,4 @@
 <!-- Update: Adjust progress bar height -->
 <!-- Update: Update logo text case -->
 <!-- Update: Refactor skill type mapping -->
+<!-- Update: Improve accessibility of icon buttons -->
