Improve error handling in fetch calls

--- a/index.html
+++ b/index.html
@@ -690,3 +690,4 @@
 <!-- Update: Add smooth scroll behavior -->
 <!-- Update: Update CV download link -->
 <!-- Update: Refactor loadPortfolio function -->
+<!-- Update: Improve error handling in fetch calls -->
