Add subtle hover effects to buttons

--- a/index.html
+++ b/index.html
@@ -678,3 +678,4 @@
 <!-- Update: Update font loading strategy -->
 <!-- Update: Refactor grid layout logic -->
 <!-- Update: Optimize marquee animation speed -->
+<!-- Update: Add subtle hover effects to buttons -->
