Refactor grid layout logic

--- a/index.html
+++ b/index.html
@@ -676,3 +676,4 @@
 <!-- Update: Adjust color palette contrast -->
 <!-- Update: Improve typography accessibility -->
 <!-- Update: Update font loading strategy -->
+<!-- Update: Refactor grid layout logic -->
