Optimize CSS transitions performance

--- a/index.html
+++ b/index.html
@@ -694,3 +694,4 @@
 <!-- Update: Adjust hero title font size -->
 <!-- Update: Update social icons hover state -->
 <!-- Update: Refine project card shadow effects -->
+<!-- Update: Optimize CSS transitions performance -->
