Update copyright year in footer

--- a/index.html
+++ b/index.html
@@ -695,3 +695,4 @@
 <!-- Update: Update social icons hover state -->
 <!-- Update: Refine project card shadow effects -->
 <!-- Update: Optimize CSS transitions performance -->
+<!-- Update: Update copyright year in footer -->
