Refine footer sitemap links

--- a/index.html
+++ b/index.html
@@ -685,3 +685,4 @@
 <!-- Update: Optimize GitHub stats fetching -->
 <!-- Update: Adjust timeline spacing on mobile -->
 <!-- Update: Update contact form validation -->
+<!-- Update: Refine footer sitemap links -->
