Optimize image loading performance

--- a/index.html
+++ b/index.html
@@ -670,3 +670,4 @@
 </body>
 
 </html><!-- Update: Refactor styling for better responsiveness -->
+<!-- Update: Optimize image loading performance -->
