--- a/index.html
+++ b/index.html
@@ -672,3 +672,4 @@
 </html><!-- Update: Refactor styling for better responsiveness -->
 <!-- Update: Optimize image loading performance -->
 <!-- Update: Update meta tags for SEO improvements -->
+<!-- Update: Refine cursor animation logic -->
