Optimize Tailwind configuration

--- a/index.html
+++ b/index.html
@@ -686,3 +686,4 @@
 <!-- Update: Adjust timeline spacing on mobile -->
 <!-- Update: Update contact form validation -->
 <!-- Update: Refine footer sitemap links -->
+<!-- Update: Optimize Tailwind configuration -->
