Refine skill cards border styles

--- a/index.html
+++ b/index.html
@@ -681,3 +681,4 @@
 <!-- Update: Add subtle hover effects to buttons -->
 <!-- Update: Improve mobile navigation transition -->
 <!-- Update: Update system status text logic -->
+<!-- Update: Refine skill cards border styles -->
