Update logo text case

--- a/index.html
+++ b/index.html
@@ -703,3 +703,4 @@
 <!-- Update: Refine background grid pattern -->
 <!-- Update: Optimize selection color style -->
 <!-- Update: Adjust progress bar height -->
+<!-- Update: Update logo text case -->
